# megamario

./: CMakeLists.txt  SPECIFICATION.md  assets.txt
assets/: assets.txt
assets/levels/: level1.txt
src/: Action.cpp  Action.hpp  Animation.cpp  Animation.hpp  Assets.cpp  Assets.hpp  Components.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  GameEngine.cpp  GameEngine.hpp  Physics.cpp  Physics.hpp  Scene.cpp  Scene.hpp  Scene_Menu.cpp  Scene_Menu.hpp  Scene_Play.cpp  Scene_Play.hpp  Vec2.cpp  Vec2.hpp  main.cpp
tests/: CMakeLists.txt  test_Vec2.cpp
